# AdwMod-theme

./: .gitignore  README.md  TODO.md  meson.build  meson_options.txt
AdwMod/: index.theme  meson.build
AdwMod-dark/: index.theme  meson.build
AdwMod-dark/gnome-shell/: README.md  gnome-shell-sass  pad-osd.css
AdwMod-dark/gtk-2.0/: meson.build
AdwMod-dark/gtk-3.0/: _apps.scss  _budgie-desktop.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _libhandy.scss  _tweaks.scss  assets  gtk-dark.scss
AdwMod-dark/gtk-4.0/: _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _tweaks.scss  assets  gtk-dark.scss  meson.build
AdwMod-dark/plank/: dock.theme
AdwMod-dark/xfwm4/: themerc
AdwMod/gnome-shell/gnome-shell-sass/: _extensions.scss
AdwMod/gnome-shell/gnome-shell-sass/widgets/: _misc.scss  _panel.scss
AdwMod/gtk-2.0/: meson.build
AdwMod/gtk-3.0/: _budgie-desktop.scss  _colors.scss  _common.scss  _drawing.scss  _libhandy.scss  _tweaks.scss  meson.build
AdwMod/gtk-4.0/: _colors.scss  _common.scss  _drawing.scss  _tweaks.scss  gtk-dark.scss  gtk.scss  meson.build
AdwaitaEx-dark/gtk-3.0/: _budgie-desktop.scss  meson.build
AdwaitaEx/gtk-3.0/: _apps.scss  _budgie-desktop.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _libhandy.scss  _tweaks.scss  gtk.scss  meson.build
src/: index.theme.in  meson.build
src/gnome-shell/: gnome-shell.AdwMod-dark.scss  gnome-shell.AdwMod.scss  gnome-shell.scss.in  meson.build
src/gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss
src/gnome-shell/gnome-shell-sass/widgets/: _app-grid.scss  _base.scss  _calendar.scss  _check-box.scss  _dash.scss  _dialogs.scss  _entries.scss  _login-dialog.scss  _message-list.scss  _misc.scss  _notifications.scss  _osd.scss  _overview.scss  _panel.scss  _popovers.scss  _screen-shield.scss  _search-entry.scss  _search-results.scss  _slider.scss  _window-picker.scss  _workspace-thumbnails.scss
src/gtk-2.0/: assets.txt  clean-assets-dark.sh  clean-assets-external-dark.sh  meson.build  render-assets-dark.sh  render-assets-external-dark.sh
src/gtk-3.0/: _apps.scss  _budgie-desktop.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _libhandy.scss  _tweaks.scss  _widgets.scss  assets.txt  gtk-dark.gtk-3.0.AdwMod.scss  gtk-dark.scss.in  gtk.gtk-3.0.AdwMod-dark.scss  gtk.gtk-3.0.AdwMod.scss  gtk.scss.in  meson.build
src/gtk-3.0/apps/: _budgie-desktop.scss  _chromium.scss  _epiphany.scss  _gedit.scss  _libhandy-legacy.scss  _lightdm-gtk-greeter.scss  _mate.scss  _nautilus.scss  _nemo.scss  _xfce.scss
src/gtk-3.0/widgets/: _buttons.scss  _calendar.scss  _checks.scss  _color-chooser.scss  _emoji-chooser.scss  _entries.scss  _file-chooser.scss  _header-bar.scss  _labels.scss  _level-bar.scss  _links.scss  _lists.scss  _menus.scss  _message-dialog.scss  _misc.scss  _notebook.scss  _paned.scss  _popovers.scss  _progress-bar.scss  _scale.scss  _scrolling.scss  _shortcuts-window.scss  _sidebars.scss  _spin-button.scss  _spinner.scss  _switch.scss  _tabs.scss  _text-selection.scss  _toolbars.scss  _trees.scss  _view-switcher.scss  _views.scss  _window.scss
src/gtk-4.0/: _apps.scss  _colors.scss  _common.scss  _drawing.scss  _libadwaita.scss  _tweaks.scss  _widgets.scss  gtk-dark.scss.in  gtk.gtk-4.0.AdwMod-dark.scss  gtk.gtk-4.0.AdwMod.scss  gtk.scss.in  meson.build
src/gtk-4.0/widgets/: _buttons.scss  _checks.scss  _dialogs.scss  _dropdowns.scss  _emoji-chooser.scss  _entries.scss  _header-bar.scss  _labels.scss  _level-bar.scss  _menus.scss  _message-dialog.scss  _misc.scss  _notebook.scss  _popovers.scss  _progress-bar.scss  _scale.scss  _shortcuts-window.scss  _sidebars.scss  _switch.scss  _tab-view.scss  _text-selection.scss  _toolbars.scss  _transition-shadow.scss  _view-switcher.scss  _window.scss
src/metacity-1/: meson.build  metacity-theme-3.xml
src/plank/: meson.build
src/upstream/: adwaita4-upstream-sync.sh  gs-upstream-sync.sh  gs40-upstream-sync.sh  libhandy-upstream-sync.sh
src/upstream/gnome-shell/gnome-shell-sass/widgets/: _notifications.scss
src/xfwm4/: clean-assets-dark.sh  clean-assets.sh  render-assets-dark.sh  render-assets.sh
